<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo_login" />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="261dp"
        android:background="#7af6d8"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/login_user"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="186dp"
        android:background="#7af6d8"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/login_pw"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/login_card"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_connexion"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>