<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compte_a_debiter"
            android:textColor="@color/pink"
            android:textSize="15dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/compteDebSelect"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:elevation="1dp"
            android:innerRadius="0dp"
            android:layout_marginBottom="10dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/debiteur_spinner_services"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compte_a_crediter"
            android:textColor="@color/pink"
            android:layout_marginTop="25dp"
            android:textSize="15dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/compteCredSelect"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:elevation="1dp"
            android:innerRadius="0dp"
            android:layout_marginBottom="10dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/crediteur_spinner_services"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montant"
            android:textColor="@color/pink"
            android:layout_marginTop="25dp"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="77dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/button_envoyer"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>